# full-test-os-mobile

./: README.md
test_os/test_os/: Cargo.toml
test_os/test_os/src/: e2e.rs  e2eupdate.rs  reg_test.rs  stress_test.rs
