[package]
name = "reg_test"
version = "0.1.0"
edition = "2026"

[dependencies]
dirs = "5.0"  

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }
android_logger = { version = "0.13", optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc = { version = "0.2", optional = true }

[features]
android = ["jni", "android_logger"]
ios = ["objc"]

[package.metadata.android]
target_sdk_version = 31
min_sdk_version = 21

[package.metadata.ios]
deployment_target = "13.0"

[package]
name = "e2e"
version = "0.1.0"
edition = "2026"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[target.'cfg(target_os = "ios")'.dependencies]
objc = { version = "0.2" }

[[test]]
name = "mobile_e2e"
path = "tests/mobile_e2e/mod.rs"
required-features = []